--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_home">Home</string>
-    <string name="title_search">Search</string>
+    <string name="title_all_orders">Orders</string>
     <string name="title_notifications">Notificaions</string>
-    <string name="title_orders">Orders</string>
+    <string name="title_cart">Cart</string>
     <string name="title_profil">Profile</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
